@@ -26,6 +26,7 @@ intef-exe (3:2.7) lucid; urgency=medium
     - Fixed: UDL Style. Print version presentation problems. (#621)
     - Fixed: IFRAME content not displaying inside tabs, timelines, accordions... (#625)
     - Fixed: Download elp iDevice: Unnecessary quotation marks. (#626)
+    - Fixed: Scrambled List iDevice introduction: Allow more than one paragraph. (#627)
 
   * APSL
     - Package building.
